objects/tfn_Letter_of_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Interest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interest</label>
        <referenceTo>loc03__Easement_FeeTitle__c</referenceTo>
        <relationshipLabel>Letters of Approval</relationshipLabel>
        <relationshipName>Letters_of_Approval</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOA_Approved_by_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Approved by Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOA_Sent_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Sent to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_LOA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOA Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Letters_of_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tfn_LOA_Category_Description__c</fullName>
        <label>LOA Category Default Text</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>tfn_LOA_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The removal of fallen timber for the Owner’s non-commercial use consistent with the Covenant Objectives and pursuant to the Covenant Management Plan;</fullName>
                </value>
                <value>
                    <fullName>Strategic grazing for biomass control in accordance with Covenant Management Plan.</fullName>
                </value>
                <value>
                    <fullName>The removal of fallen timber from the Land for firewood for personal use provided that good habitat for native fauna (hollow trees) is not removed.</fullName>
                </value>
                <value>
                    <fullName>The keeping of one dog to be kept under control at all times;</fullName>
                </value>
                <value>
                    <fullName>The keeping of two dogs to be kept under control at all times;</fullName>
                </value>
                <value>
                    <fullName>The retention of the existing cat for the duration of its life provided that it is restricted to a dwelling or cattery between dusk and dawn;</fullName>
                </value>
                <value>
                    <fullName>The harvesting of up to 10 trees every 5years. Only XX of these trees may be (Species).  All trees removed must be under 60 centimetres in diameter at breast height and must not contain hollows</fullName>
                </value>
                <value>
                    <fullName>The installation bee hives (10 maximum) within the covenanted area for the purpose of capturing feral bees.</fullName>
                </value>
                <value>
                    <fullName>Ecological thinning in accordance with the covenant management plan.</fullName>
                </value>
                <value>
                    <fullName>The collection of seeds for personal use from trees, plants or grasses on the Land / Protected Land</fullName>
                </value>
                <value>
                    <fullName>The riding of horses through the Grazing Land and Protected Land provided that riding is restricted to existing tracks and that horses are not kept on the Grazing Land or Protected Land</fullName>
                </value>
                <value>
                    <fullName>Permission to keep open existing tracks provided no new tracks are created;</fullName>
                </value>
                <value>
                    <fullName>The emergency grazing of sheep/cattle in severe weather conditions;</fullName>
                </value>
                <value>
                    <fullName>No default text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_LOA_Category__c</fullName>
        <label>LOA Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bee hives</fullName>
                </value>
                <value>
                    <fullName>Cats</fullName>
                </value>
                <value>
                    <fullName>Dogs</fullName>
                </value>
                <value>
                    <fullName>Ecological thinning</fullName>
                </value>
                <value>
                    <fullName>Ecotourism</fullName>
                </value>
                <value>
                    <fullName>Firewood</fullName>
                </value>
                <value>
                    <fullName>Grazing</fullName>
                </value>
                <value>
                    <fullName>Horses keeping</fullName>
                </value>
                <value>
                    <fullName>Horses riding</fullName>
                </value>
                <value>
                    <fullName>Kangaroo Contorl</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Seed collection</fullName>
                </value>
                <value>
                    <fullName>Timber removal</fullName>
                </value>
                <value>
                    <fullName>Tree Harvesting</fullName>
                </value>
                <value>
                    <fullName>Track</fullName>
                </value>
                <value>
                    <fullName>Dams</fullName>
                </value>
                <value>
                    <fullName>Other Exception</fullName>
                </value>
                <value>
                    <fullName>Other Pet</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                </value>
                <value>
                    <fullName>Poultry</fullName>
                </value>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                    <isActive>false</isActive>
                    <label>Cat</label>
                </value>
                <value>
                    <fullName>Dog</fullName>
                    <isActive>false</isActive>
                    <label>Dog</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_LOA_Comments__c</fullName>
        <label>LOA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_LOA_Drafted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA Drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_LOA_ID__c</fullName>
        <displayFormat>LOA{0000}</displayFormat>
        <label>LOA ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>tfn_LOA_Status__c</fullName>
        <label>LOA Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Tier__c</fullName>
        <label>Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tfn_Tier_Global</valueSetName>
        </valueSet>
    </fields>
    <label>Letter of Approval</label>
    <nameField>
        <label>Letter of Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letters of Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>